correct z-index

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -6,7 +6,7 @@
     background-image: $image-gradient, url(@img/home-bg.jpg);
     background-position: top center;
     background-repeat: no-repeat;
-    z-index: 1;
+    z-index: -1;
 
     &__body {
         padding: 0px 74px 82px 27px;
